# tiny-neural

./: AGENT.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  PLUG_AND_PLAY.md  README.md
memory/: JOURNAL.md
src/: activation.rs  backprop.rs  conv.rs  init.rs  layer.rs  lib.rs  loss.rs  network.rs  optimizer.rs  regularize.rs  tensor.rs
